--- a/research plan/plan.tex
+++ b/research plan/plan.tex
@@ -166,6 +166,22 @@ the foundations of data science, machine learning, and artificial intelligence.
 
 \subsection*{2.~~~State of the art}
 
+The problems of maximizing diversity and promoting fairness have been studied 
+extensively in different contexts in computer science, 
+especially in recent times with the raising importance of \emph{responsible AI}~\cite{responsible-AI}.
+
+diversity as an optimization problem
+
+diversity in recommender systems
+
+diversity in graphs
+
+fairness in ML
+
+diversity and fairness in information markets
+
+my work
+
 \subsection*{3.~~~Significance and scientific novelty}
 
 \subsection*{4.~~~Project description}
