--- a/research plan/references.bib
+++ b/research plan/references.bib
@@ -1,3 +1,92 @@
+@book{dignum2019responsible,
+  title={Responsible artificial intelligence: {H}ow to develop and use {AI} in a responsible way},
+  author={Dignum, Virginia},
+  volume={2156},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{bach2013learning,
+  title={Learning with submodular functions: A convex optimization perspective},
+  author={Bach, Francis and others},
+  journal={Foundations and Trends in Machine Learning},
+  volume={6},
+  number={2-3},
+  pages={145--373},
+  year={2013}
+}
+
+@article{hassin1997approximation,
+  title={Approximation algorithms for maximum dispersion},
+  author={Hassin, Refael and Rubinstein, Shlomi and Tamir, Arie},
+  journal={Operations research letters},
+  volume={21},
+  number={3},
+  pages={133--137},
+  year={1997}
+}
+
+@inproceedings{gollapudi2009axiomatic,
+  title={An axiomatic approach for result diversification},
+  author={Gollapudi, Sreenivas and Sharma, Aneesh},
+  booktitle={Proceedings of the 18th international conference on World wide web},
+  pages={381--390},
+  year={2009}
+}
+
+@inproceedings{cevallos2017local,
+  title={Local search for max-sum diversification},
+  author={Cevallos, Alfonso and Eisenbrand, Friedrich and Zenklusen, Rico},
+  booktitle={Proceedings of the 28th Annual ACM-SIAM Symposium on Discrete Algorithms},
+  pages={130--142},
+  year={2017}
+}
+
+@inproceedings{cevallos2016max,
+  title={Max-Sum Diversity Via Convex Programming},
+  author={Cevallos, Alfonso and Eisenbrand, Friedrich and Zenklusen, Rico},
+  booktitle={32nd International Symposium on Computational Geometry (SoCG)},
+  year={2016}
+}
+
+@article{cevallos2019improved,
+  title={An improved analysis of local search for max-sum diversification},
+  author={Cevallos, Alfonso and Eisenbrand, Friedrich and Zenklusen, Rico},
+  journal={Mathematics of Operations Research},
+  volume={44},
+  number={4},
+  pages={1494--1509},
+  year={2019}
+}
+
+@Inbook{Castells2022,
+  author={Castells, Pablo and Hurley, Neil and Vargas, Sa{\'u}l},
+  title={Novelty and Diversity in Recommender Systems},
+  bookTitle={Recommender Systems Handbook},
+  year={2022},
+  publisher={Springer}
+}
+
+@inproceedings{MMR,
+  author = {Carbonell, Jaime and Goldstein, Jade},
+  title = {The Use of {MMR}, Diversity-Based Reranking for Reordering Documents and Producing Summaries},
+  year = {1998},
+  booktitle = {Proceedings of the 21st Annual International ACM SIGIR Conference on Research and Development in Information Retrieval}
+}
+
+@inproceedings{DUM,
+  author = {Ashkan, Azin and Kveton, Branislav and Berkovsky, Shlomo and Wen, Zheng},
+  title = {Optimal Greedy Diversity for Recommendation},
+  booktitle = {Proceedings of the 24th International Joint Conference on Artificial Intelligence (IJCAI)},
+  year = {2015}
+}
+
+@inproceedings{DPMF,
+  author = {Sha, Chaofeng and Wu, Xiaowei and Niu, Junyu},
+  title = {A Framework for Recommending Relevant and Diverse Items},
+  booktitle = {Proceedings of the 21st International Joint Conference on Artificial Intelligence (IJCAI)},
+  year = {2016}
+}
 
 
 @article{cormode2011synopses,
