--- a/research plan/references.bib
+++ b/research plan/references.bib
@@ -29,7 +29,7 @@
 @inproceedings{gollapudi2009axiomatic,
   title={An axiomatic approach for result diversification},
   author={Gollapudi, Sreenivas and Sharma, Aneesh},
-  booktitle={Proceedings of the 18th international conference on World wide web},
+  booktitle={Proceedings of the 18th International Conference on World Wide Web},
   pages={381--390},
   year={2009}
 }
@@ -88,6 +88,120 @@
   year = {2016}
 }
 
+@article{haddadan2022reducing,
+  title={Reducing polarization and increasing diverse navigability in graphs by inserting edges and swapping edge weights},
+  author={Haddadan, Shahrzad and Menghini, Cristina and Riondato, Matteo and Upfal, Eli},
+  journal={Data Mining and Knowledge Discovery},
+  volume={36},
+  number={6},
+  pages={2334--2378},
+  year={2022}
+}
+
+@inproceedings{fabbri2022rewiring,
+  title={Rewiring what-to-watch-next recommendations to reduce radicalization pathways},
+  author={Fabbri, Francesco and Wang, Yanhao and Bonchi, Francesco and Castillo, Carlos and Mathioudakis, Michael},
+  booktitle={Proceedings of the ACM Web Conference},
+  pages={2719--2728},
+  year={2022}
+}
+
+@article{adriaens2023minimizing,
+  title={Minimizing Hitting Time between Disparate Groups with Shortcut Edges},
+  author={Adriaens, Florian and Wang, Honglian and Gionis, Aristides},
+  booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year={2023}
+}
+
+@article{coupette2023reducing,
+  title={Reducing Exposure to Harmful Content via Graph Rewiring},
+  author={Coupette, Corinna and Neumann, Stefan and Gionis, Aristides},
+  booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year={2023}
+}
+
+@inproceedings{cinus2023rebalancing,
+  title={Rebalancing Social Feed to Minimize Polarization and Disagreement},
+  author={Cinus, Federico and Gionis, Aristides and Bonchi, Francesco},
+  booktitle={Proceedings of the 32nd ACM International Conference on Information and Knowledge Management},
+  pages={369--378},
+  year={2023}
+}
+
+@inproceedings{tsioutsiouliklis2022link,
+  title={Link Recommendations for PageRank Fairness},
+  author={Tsioutsiouliklis, Sotiris and Pitoura, Evaggelia and Semertzidis, Konstantinos and Tsaparas, Panayiotis},
+  booktitle={Proceedings of the ACM Web Conference},
+  pages={3541--3551},
+  year={2022}
+}
+
+@inproceedings{wang2021user,
+  title={User fairness, item fairness, and diversity for rankings in two-sided markets},
+  author={Wang, Lequn and Joachims, Thorsten},
+  booktitle={Proceedings of the ACM SIGIR International Conference on Theory of Information Retrieval},
+  pages={23--41},
+  year={2021}
+}
+
+@article{mehrabi2021survey,
+  title={A survey on bias and fairness in machine learning},
+  author={Mehrabi, Ninareh and Morstatter, Fred and Saxena, Nripsuta and Lerman, Kristina and Galstyan, Aram},
+  journal={ACM Computing Surveys},
+  volume={54},
+  number={6},
+  pages={1--35},
+  year={2021}
+}
+
+@article{caton2020fairness,
+  title={Fairness in machine learning: {A} survey},
+  author={Caton, Simon and Haas, Christian},
+  journal={ACM Computing Surveys},
+  year={2020}
+}
+
+@article{chierichetti2017fair,
+  title={Fair clustering through fairlets},
+  author={Chierichetti, Flavio and Kumar, Ravi and Lattanzi, Silvio and Vassilvitskii, Sergei},
+  journal={Advances in Neural Information Processing Systems},
+  volume={30},
+  year={2017}
+}
+
+@article{dong2023fairness,
+  title={Fairness in graph mining: A survey},
+  author={Dong, Yushun and Ma, Jing and Wang, Song and Chen, Chen and Li, Jundong},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  year={2023},
+  publisher={IEEE}
+}
+
+@inproceedings{thejaswi2021diversity,
+  title={Diversity-aware $k$-median: {C}lustering with fair center representation},
+  author={Thejaswi, Suhas and Ordozgoiti, Bruno and Gionis, Aristides},
+  booktitle={Machine Learning and Knowledge Discovery in Databases (ECML PKDD)},
+  pages={765--780},
+  year={2021}
+}
+
+@article{zhang2022ranking,
+  title={Ranking with submodular functions on a budget},
+  author={Zhang, Guangyi and Tatti, Nikolaj and Gionis, Aristides},
+  journal={Data Mining and Knowledge Discovery},
+  volume={36},
+  number={3},
+  pages={1197--1218},
+  year={2022}
+}
+
+@article{oettershagen2024finding,
+  title={Finding Densest Subgraphs with Edge-Color Constraints},
+  author={Oettershagen, Lutz and Wang, Honglian and Gionis, Aristides},
+  booktitle={Proceedings of the ACM Web Conference},
+  year={2024}
+}
+
 
 @article{cormode2011synopses,
   title={Synopses for massive data: Samples, histograms, wavelets, sketches},
@@ -112,7 +226,7 @@
 @inproceedings{guy2010social,
   title={Social media recommendation based on people and tags},
   author={Guy, Ido and Zwerdling, Naama and Ronen, Inbal and Carmel, David and Uziel, Erel},
-  booktitle={Proceedings of the 33rd international ACM SIGIR conference on Research and development in information retrieval},
+  booktitle={Proceedings of the 33rd International ACM SIGIR Conference on Research and Development in Information Retrieval},
   pages={194--201},
   year={2010}
 }
@@ -412,7 +526,7 @@ pages = {1130--1132}
 @inproceedings{shahaf2012trains,
   title={Trains of thought: Generating information maps},
   author={Shahaf, Dafna and Guestrin, Carlos and Horvitz, Eric},
-  booktitle={Proceedings of the 21st international conference on World Wide Web (WWW)},
+  booktitle={Proceedings of the 21st International Conference on World Wide Web (WWW)},
   pages={899--908},
   year={2012}
 }
@@ -508,7 +622,7 @@ pages = {1130--1132}
 @inproceedings{das2013learning,
   title={Learning to question: leveraging user preferences for shopping advice},
   author={Das, Mahashweta and De Francisci Morales, Gianmarco and {\bf Gionis}, {\bf A} and Weber, Ingmar},
- booktitle={Proceedings of the ACM SIGKDD international conference on Knowledge discovery and data mining},
+ booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
   pages={203--211},
   year={2013}
 }
@@ -702,7 +816,7 @@ year = {1984}
 @inproceedings{barbieri2013cascade,
   title={Cascade-based community detection},
   author={Barbieri, Nicola and Bonchi, Francesco and Manco, Giuseppe},
-  booktitle={Proceedings of the sixth ACM international conference on Web Search and Data Mining (WSDM)},
+  booktitle={Proceedings of the sixth ACM International Conference on Web Search and Data Mining (WSDM)},
   pages={33--42},
   year={2013},
   organization={ACM}
@@ -1173,7 +1287,7 @@ year = {1984}
 @inproceedings{flake2000efficient,
  author = {Gary Flake and Steve Lawrence and Lee Giles},
  title = {Efficient identification of Web communities},
- booktitle={Proceedings of the ACM SIGKDD international conference on Knowledge discovery and data mining},
+ booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
  year = {2000}
 }
 
@@ -1241,14 +1355,14 @@ year = {1984}
 @inproceedings{mathioudakis2011sparsification,
   author    = {Mathioudakis, Michael and Bonchi, Francesco and Castillo, Carlos and {\bf Gionis}, {\bf A} and Ukkonen, Antti},
   title     = {Sparsification of influence networks},
- booktitle={Proceedings of the ACM SIGKDD international conference on Knowledge discovery and data mining},
+ booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
   year      = {2011}
 }
 
 @inproceedings{sozio2010community-search,
   author    = {Sozio, Mauro and {\bf Gionis}, {\bf A}},
   title     = {The community-search problem and how to plan a successful cocktail party},
- booktitle={Proceedings of the ACM SIGKDD international conference on Knowledge discovery and data mining},
+ booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
    pages={939--948},
   year      = {2010}
 }
@@ -1272,6 +1386,6 @@ year = {1984}
                Kun Liu and
                Evimaria Terzi},
   title     = {Finding a team of experts in social networks},
- booktitle={Proceedings of the ACM SIGKDD international conference on Knowledge discovery and data mining},
+ booktitle={Proceedings of the ACM SIGKDD International Conference on Knowledge discovery and data mining},
   year      = {2009}
 }
