--- a/research plan/plan.tex
+++ b/research plan/plan.tex
@@ -87,7 +87,7 @@ Among diffrent information-access systems we will focus on
 information-exploration systems, information networks, and two-sided information markets.
 \end{minipage}}
 
-{\color{red}\spara{Text below could also go to ``novelty''.}}
+\ag{Text below could also go to ``novelty''.}
 
 \spara{Challenges.}
 The proposed project is of theoretical nature, 
@@ -268,20 +268,57 @@ as well as in data clustering~\cite{thejaswi2021diversity}.
 
 \subsection*{3.~~~Significance and scientific novelty}
 
+\instructions{
+Describe briefly how the project relates to previous research within the area, 
+and the impact the project may have in the short and long term. 
+Describe also how the project moves forward or innovates the current research frontier.}
+
+\ag{
+Maybe some comments from state of the art can be moved here, or rephrased. \\
+Also say the main novelty would be to study diversity and fairness in new settings.
+}
+
 \subsection*{4.~~~Project description}
 
 
 \subsubsection*{4.1.~~~Theory and methods}
 
+\instructions{
+Describe the underlying theory and the methods to be applied in order to reach the project goal.}
+
+
 \subsubsection*{4.2.~~~Time plan and implementation}
+
+\instructions{
+Describe summarily the time plan for the project during the grant period, 
+and how the project will be implemented. 
+Describe also any crucial risks or obstacles that may impact on the implementation, 
+and your plan for managing these.}
+
 
 \subsubsection*{4.3.~~~Project organisation}
 
-
+\instructions{
+Clarify the contributions of yourself and any other researchers and/or key persons (including any doctoral students) 
+to the implementation of the project, 
+including a description of competences and roles in the project. 
+Explain in particular how the time allocated by you (that is, your activity level) 
+as project leader is suitable for the task, 
+including the relationship with your other research undertakings.}
 
 \subsection*{5.~~~Need for research infrastructure}
 
+\instructions{
+Specify the project’s need for international and national research infrastructure. 
+If you choose to use other infrastructures than those supported by the Swedish Research Council, 
+and that are thereby open to all, 
+you must justify this (also applies to local research infrastructure).}
+
 \subsection*{6.~~~International and national collaboration}
+
+\instructions{
+Describe your collaboration with foreign and Swedish researchers and research teams. 
+State whether you contribute to or refer to international collaboration in your research.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
