--- a/research plan/macros.tex
+++ b/research plan/macros.tex
@@ -41,6 +41,10 @@
 \newcommand{\acronym}{{\sf\small DIFIAS}\xspace}
 \newcommand{\acronymtitle}{{\sf\Large DIFIAS}\xspace}
 
+\newcommand{\exploration}{{\sf\small Exploration}\xspace}
+\newcommand{\networks}{{\sf\small Networks}\xspace}
+\newcommand{\markets}{{\sf\small Information-Markets}\xspace}
+
 %\newcommand{\proposaltitle}{{Combating bias and polarization in online media}}
 %\newcommand{\proposaltitle}{{Balancing content and reducing controversy in social media}}
 \newcommand{\proposaltitle}{{Diversity and fairness in information-access systems}}
