--- a/research plan/references.bib
+++ b/research plan/references.bib
@@ -1,3 +1,13 @@
+@article{mitzenmacher2022algorithms,
+  title={Algorithms with predictions},
+  author={Mitzenmacher, Michael and Vassilvitskii, Sergei},
+  journal={Communications of the ACM},
+  volume={65},
+  number={7},
+  pages={33--35},
+  year={2022}
+}
+
 @book{dignum2019responsible,
   title={Responsible artificial intelligence: {H}ow to develop and use {AI} in a responsible way},
   author={Dignum, Virginia},
