--- a/research plan/references.bib
+++ b/research plan/references.bib
@@ -8,6 +8,31 @@
   year={2022}
 }
 
+@inproceedings{chen2013combinatorial,
+  title={Combinatorial multi-armed bandit: General framework and applications},
+  author={Chen, Wei and Wang, Yajun and Yuan, Yang},
+  booktitle={International Conference on Machine Learning},
+  pages={151--159},
+  year={2013}
+}
+
+@inproceedings{adriaens2022diameter,
+  title={Diameter minimization by shortcutting with degree constraints},
+  author={Adriaens, Florian and Gionis, Aristides},
+  booktitle={2022 IEEE International Conference on Data Mining (ICDM)},
+  pages={843--848},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{wang2022improving,
+  title={Improving screening processes via calibrated subset selection},
+  author={Wang, Lequn and Joachims, Thorsten and Rodriguez, Manuel Gomez},
+  booktitle={International Conference on Machine Learning},
+  pages={22702--22726},
+  year={2022}
+}
+
 @book{dignum2019responsible,
   title={Responsible artificial intelligence: {H}ow to develop and use {AI} in a responsible way},
   author={Dignum, Virginia},
