--- a/research plan/plan.tex
+++ b/research plan/plan.tex
@@ -295,11 +295,6 @@ diversity and fairness in information networks; and
 diversity and fairness in information markets.
 \end{description}
 \vspace{-1mm}
-\iffalse
-\emph{diversity and fairness for information exploration tasks} (\exploration), 
-\emph{diversity and fairness in information networks} (\networks), 
-\emph{diversity and fairness in information markets} (\markets), 
-\fi
 Each theme is characterized by a different domain
 for which we are aiming to ensure criteria of diversity and fairness. 
 Each domain corresponds to a distinct family of information-access systems, 
@@ -335,6 +330,7 @@ Next we overview the three research themes of \acronym.
 
 \subsubsection*{Research theme 1: Diversity and fairness for information-exploration tasks}
 
+\iffalse
 \noindent
 \hspace{-3mm}\colorbox{verylightmagenta}{
 \begin{minipage}{\textwidth}
@@ -342,6 +338,8 @@ Next we overview the three research themes of \acronym.
 \end{minipage}}
 
 \vspace{2mm}
+\fi
+
 We consider an information system
 that stores a large collection of information items.
 Users interact with the system and can access the items through various means 
@@ -371,77 +369,123 @@ based on the relevance and novelty of the presented items,
 as well as the duration of the exploration session so far.
 
 Motivated by these observations, 
-we will formulate novel frameworks for information exploration
+we will introduce novel frameworks for information-exploration tasks
 that model \emph{user behavior} and aim to optimize 
 the total amount of knowledge accrued by the user during exploration, 
-while accounting for relevance and diversity.
+thus, provisioning for relevance and diversity in an intuitive manner.
 In our preliminary work, we have studied a simple version 
 of this problem where we ask to \emph{maximize expected diversity} 
-in presence of a probability that, depending on item relevance,  
-at any given step the user will terminate the exploration task. 
-The problem has very interesting connections to \emph{ordered Hamiltonian-path problem}, 
-and under mild assumptions we are able to design provable approximation algorithms.
+in presence of probabilities that users may terminate the exploration task
+at any given step of their interaction with the system.
+Such probabilities can be estimated based on the relevance and novelty
+of the items presented to them.
+The problem has interesting connections to \emph{ordered Hamiltonian-path problem}, 
+and under mild assumptions we are able to design approximation algorithms
+with provable guarantees.
+In this project we aim to devise improved methods
+and extend our framework to more sophisticated user-behavior models.
+
+Another consideration in the information-exploration theme
+is to consider \emph{fair representation of content} along different dimensions. 
+For example, when recommending news articles for a user, 
+it is important to considering presenting more than one article from the same story
+so as to ensure \emph{coverage} of different sources with respect to their \emph{political leaning}, 
+as well as with respect to their \emph{stance} towards important entities in the stories. 
+To infer entities and stances towards them we will use standard NLP toolboxes and large language models.
+Additionally, we want to select stories that are well-align with user interests. 
+This is relevant to the topic of \emph{calibrated recommendations}~\cite{wang2022improving}.
+In \acronym, we will develop methods for recommendations that 
+offer \emph{calibrated} as well as \emph{fairly-represented} content.
+Furthermore, we will study problems that model the sequential-nature of recommendations~\cite{zhang2022ranking}.
+
+Finally, we will study the information-exploration task using \emph{reinforcement learning}.
+The idea would be to formulate the task as a bandit problem
+where the reward depends on actions performed in earlier steps, 
+quantifying diversity and fairness considerations. 
+The problem can be cast as combinatorial multi-armed bandit~\cite{chen2013combinatorial}, 
+which will be the starting point for our research. 
+
+\subsubsection*{Research theme 2: Diversity and fairness in information networks}
+
+In this theme we focus on information networks. 
+As before, we consider a general setting, 
+where networks are used to model a variety of real-world scenarios
+representing entities and their relationships.
+Examples include 
+social networks connecting people, 
+hyperlink networks linking web pages, or 
+recommendation networks consisting of what-to-consume-next recommendations
+in a platform like youtube.
+We view networks as systems where information can be spread and content can be consumed. 
+Information diffusion and content consumption in a network
+is typically modeled via a dynamic process, such as a random walk, 
+shortest paths, local search, etc.
+
+We additionally assume that the network nodes are labeled according to certain attributes, 
+for instance, demographic groups in social networks, 
+web page categories in hyperlink networks, 
+content type in recommendation networks, and so on.
+As a result of the 
+The node attributes coupled with the network structure may give rise to 
+\emph{structural bias} being present in the network.
+As an example, contacts in a social network are more likely to have similar views on a topic, 
+and thus, when navigating a network one may encounter bias regarding views on that topic.
+The problem of mitigating the phenomenon of structural bias in information networks is an emerging topic, 
+and many recent papers have addressed related questions~\cite{fabbri2022rewiring,haddadan2022reducing}, 
+including papers by the PI and his 
+team~\cite{adriaens2022diameter,adriaens2023minimizing,cinus2023rebalancing,coupette2023reducing}.
+Typical questions are to identify network interventions, 
+such as, edge additions, re\-wirings, or re\-weightings, 
+to optimize given measures of bias or polarization.
+
+We aim to advance the state of the art in this topic
+along many directions. 
+First, many of the proposed techniques consider only two groups of nodes in the network, 
+i.e., a single attribute with only two values.
+Extending the existing methods for more than two groups, 
+to account for realistic demographic scenarios or topics with multiple viewpoints, 
+is a non trivial problem.
+Second, while many of the existing works consider the problems of minimizing bias and polarization, 
+the issues of diversity and fairness in information networks have not been studied.  
+We propose to study a novel measure of diversity with respect to random-walk navigation, 
+defined as the \emph{group cover time}, i.e., 
+the expected time to visit at least one node of each color
+in a random walk starting from a given node.
+Our goal is to design network-intervention methods to 
+optimize this diversity measure.
+
+Additionally, while most methods consider random-walk navigation for information access, 
+it is also interesting to study navigation models based on shortest-path distances. 
+In our earlier work we studied the problem of adding edges in order to minimize the network diameter, 
+with degree constraints~\cite{adriaens2022diameter}.
+As our model does not consider any node attributes, 
+we aim to extend the problem in settings with node attributes. 
+The goal is to identify small sets of network interventions
+to optimize information access among the different groups in the network.
+
+In another direction, existing methods typically consider \emph{global interventions}, 
+that is, they seek to identify a small number of interventions so as to 
+optimize a global network objective. 
+However, it is particularly interesting to study settings for \emph{local interventions}, 
+where we aim to provide \emph{recourse actions} for a particular node of interest in the network, 
+so as to optimize diversity and fairness measures for that node. 
+One challenge here is to ensure such actions do not degrade 
+the corresponding measures of other nodes in the~network. 
+\ag{social welfare?}
+
+Finally, in all of the previous cases it is assumed that interventions are certain, 
+e.g., edges can be added with probability~1.
+In some cases, interventions correspond to link recommendations, 
+which are adopted with a certain probability
+(which often can be estimated).
+Thus, it will be extremely interesting to study versions of those problems
+in the presence of \emph{uncertainty} for the proposed interventions.
+
+\ag{fairness-aware pagerank?}
 
 
-Tianyi 
 
-
-
-
-
-
-
-
-This thrust builds strongly on our preliminary work.
-In particular, we have considered the problem 
-of identifying controversial discussions on social media~\cite{garimella2018quantifying}.
-Our methods are designed to be applicable to topics in any domain 
-(e.g., political, economical, or cultural), and in a general setting.
-We have also addressed the question of devising a measure of controversy,
-which is applicable to any online discussion.
-More recently we devised a new study aimed to 
-understand the phenomenon of echo chambers in social media, 
-and to characterize distinct user types and their role in their local community~\cite{garimella2018political}.
-
-\smallskip
-In this project we will extend significantly our problem representations
-so as to obtain a deeper analysis and develop much more advanced knowledge-discovery methods.
-In particular, our existing work relies on analyzing plain graphs
-with no additional information regarding text or time. 
-In \acronym\ we will incorporate text information into the mining process.
-We will develop methods to extract semantic annotations from the textual data, 
-such as
-($i$) agreement between users; 
-($ii$) political leaning of users or content items; 
-($iii$) stance with respect to topics; 
-and so on.
-We will use this information to enrich our graph models,
-provide novel formulations for mining semantically-annotated graphs, 
-and then design efficient algorithms.
-
-\smallskip
-As an example, we will consider discussion graphs
-where edges are annotated with agreement (`$+$') or disagreement (`$-$'), 
-and thus, represented as {\em signed graphs}.
-In this setting we will consider the problems of discovering alliances 
-(dense subgraphs with many `$+$' and few `$-$' edges) 
-or conflicting communities
-(sets of vertices with many `$+$' and few `$-$' within sets and many `$-$' and few `$+$' across sets). 
-These are novel problems related to dense-subgraph discovery~\cite{rozenshtein2014event,sozio2010community-search,tatti2015density,tsourakakis2013denser}
-and correlation clustering~\cite{bansal2004correlation,gionis2007clustering}.
-
-\smallskip
-We will also leverage the temporal dimension of the data
-and study formulations that allow to model and discover 
-bias, polarization, and conflict in the setting of temporal networks.
-This thread will make strong connections with our previous work on 
-temporal networks~\cite{rozenshtein2016temporal, rozenshtein2016reconstructing, rozenshtein2017finding}
-Finally we will consider problem representations  
-related to motif discovery~\cite{aslay2018mining,coletto2017motif} and role mining~\cite{arockiasamy2016combinatorial} 
-in the context of \acronym.
-
-
-
+\subsubsection*{Research theme 3: Diversity and fairness in information markets}
 
 
 \subsubsection*{4.2.~~~Time plan and implementation}
@@ -452,8 +496,54 @@ and how the project will be implemented.
 Describe also any crucial risks or obstacles that may impact on the implementation, 
 and your plan for managing these.}
 
+\spara{Time planning.}
+The project will employ three doctoral students (PhD1, PhD2, PhD3) for five years each 
+(working 80\% in research and 20\% as teaching assistants, as it is typical in KTH), 
+and three postdoctoral researchers (PostD1, PostD2, PostD3) for two years each. 
+The doctoral students will be recruited on years 1, 2, and 3 of the project, 
+and the postdocs will be recruited on years 2, 3, and 4. 
+One doctoral student and one postdoctoral researcher will work on each one of the research themes,
+so the timeline of the project with respect to research themes and personnel is as follows:
+\vspace{-2mm}
+\begin{description}
+\setlength{\itemsep}{-4pt}
+\item[1.~~{\exploration}\,:] 
+PhD1 starting on year 1, PostD1 starting on year 2;
+\item[2.~~{\networks}\,:]
+PhD2 starting on year 2, PostD2 starting on year 3;
+\item[3.~~{\markets}\,:]
+PhD3 starting on year 3, PostD3 starting on year 4;
+\end{description}
+\vspace{-2mm}
+The rationale is for \exploration to start first to study 
+fundamental concepts of diversity and fairness that can be employed in the other two themes.
+\markets will start last, as it has the highest level of ambition, novelty, and risk.
+For each theme, the postdoc will start at the second year of the doctoral student, 
+to be present in the most formative time of the student while skipping the first year when 
+the students are still get adjusted and take courses.
 
-\subsubsection*{4.3.~~~Project organisation}
+\spara{Research output.}
+We will aim publishing our work at top-tier international venues
+in the areas of Knowledge Discovery, Machine Learning, and Artificial Intelligence.
+We will focus on the quality of publications rather than quantity.
+Target journals for disseminating our work are IEEE TKDE, ACM TKDD, DMKD, etc. 
+Target conferences are NeurIPS, ICML, VLDB, SIGMOD, SIGKDD, WebConf, WSDM, etc.
+
+\spara{Materials.}
+Our publications will be available via open access, 
+in particular they will be shared via the {\small\url{arxiv.org}} repository. 
+Similarly, the software we will develop and the other outputs of the project 
+will become freely available to the scientific community via {\small\url{github.com}}.
+
+\spara{Risks and mitigation.}
+Devising efficient algorithms with provable quality guarantees is a challenging task
+and the largest risk of the project. 
+Achieving this objective, however, offers the largest potential for scientific impact in the computer science community. 
+In cases that we will not be able to prove theoretical results, 
+we will study problems with simplifying assumptions, and 
+we will focus on devising heuristic methods and providing thorough empirical validation.
+
+\subsubsection*{4.3.~~~Project organization}
 
 \instructions{
 Clarify the contributions of yourself and any other researchers and/or key persons (including any doctoral students) 
@@ -493,246 +583,6 @@ State whether you contribute to or refer to international collaboration in your 
 
 {\LARGE\bf REBOUND} % \vspace{2mm}\\ 
 \end{center}
-
-
-\subsection*{Section a. Background and objectives}
-
-Social media play a critical role in today's information society, 
-not only by connecting people with their friends, 
-but also by providing a medium where information is disseminated and public opinion is shaped.
-Initially it seemed that giving ordinary citizens the means to create content of their own
-and share their opinion publicly 
-can have only positive effects: increase the exposure to diverse ideas
-and improve the democratic process.
-However, during the past few years we have witnessed that
-the rise of online media has led to 
-a series of undesirable phenomena, 
-such as creation of information silos and increased polarization.
-More and more digital citizens find themselves in online environments
-where they only see opinions that confirm their preexisting beliefs,
-and as a result, they become ideologically segregated.
-
-\smallskip
-These negative aspects of social media have drawn a lot of attention recently.
-There has been a considerable amount of criticism, skepticism, 
-discussion in public forums, as well as calls % from stakeholders 
-to fix the problems. 
-Prominent media outlets, researchers, and think tanks have contemplated whether 
-``{\em social media is a threat to democracy}.''%
-\footnote{For example, see www.economist.com/leaders/2017/11/04/do-social-media-threaten-democracy,\\
-or www.weforum.org/agenda/2016/08/the-biggest-threat-to-democracy-your-social-media-feed/}
-Given all these concerns a natural question arises.
-
-\smallskip
-{\em How can we address the deficiencies encountered in today's online platforms  
-and how can we create environments in which online media 
-enable exchange of alternative views and promote constructive deliberation?}
-
-\smallskip
-This is certainly a complex problem that requires
-parallel work and cooperation of multiple parties: 
-owners of social-media platforms and
-traditional media outlets, 
-journalists,
-policy makers, 
-educators, 
-as well as independent academics. 
-It is also a cross-disciplinary research challenge that requires expertise in 
-sociology, political science, economics, engineering, design, and {\em computer science}.
-
-\smallskip
-The \acronym\ project aspires to contribute in addressing this complex problem
-by designing methods to perform large-scale data analysis so as to shed light to 
-phenomena such as bias, polarization, conflict, and 
-information silos in online media. 
-It will also contribute with methods
-that give users easier access to opposing ideas
-and incentives to explore and understand alternative view\-points. 
-More concretely, the project has the following goal.
-
-\medskip
-\noindent
-\hspace{-3mm}\colorbox{verylightmagenta}{
-\begin{minipage}{\textwidth}
-{\bf High-level goal of \acronym:} 
-We will develop theoretical foundations and a concrete set of algorithmic techniques 
-to address deficiencies in today's online media.
-We will develop methods to discover structure and patterns 
-of segregation, conflict, and closeness in social-media systems.
-We will address the issues of 
-reducing bias and po\-lar\-iza\-tion, breaking information silos,
-and creating awareness of users to explore alternative view\-points.
-\end{minipage}}
-
-\spara{Challenges.}
-Achieving the project goal is an extremely challenging task for a number of reasons. 
-First, we will be dealing with noisy data, 
-generated by a diverse set of actors
-who exhibit complex behavior and may have adversarial motives.
-Additionally, data are highly dynamic:
-new events are taking place and inter\-actions between actors 
-are constantly evolving over time. 
-Second, we will deal with concepts that are not well-understood 
-and we will need to develop novel abstractions. %  and problem definitions. 
-% As a simple example, although one may have an
-% intuitive understanding of the claim ``{\em social media amplify the problem of echo chambers},''
-% there is no well-accepted definition for what constitutes an echo chamber, 
-% nor how to measure it.
-For instance, 
-while there is a well-motivated discussion 
-about how to combat the problem of bias and polarization in online media, 
-there is no understanding of what does this entail % , what are the trade-offs, 
-nor what could be the side effects of possible remedial actions.
-Third, we will be confronted with challenging computational tasks 
-that lead to difficult optimization problems. 
-Thus, it is desirable to develop methods 
-that offer approximation guarantees or other theoretical properties. 
-
-\iffalse
-\spara{Methodological approach.}
-We will pursue the project goal by
-following a methodology that aims to tackle the challenges outlined above.
-(1)~We will develop abstractions that capture the semantics of the application domain
-and we will provide formal problem definitions that capture our objectives.
-(2)~We will develop and work with theoretical frameworks that capture the noise and complexity 
-of real-world data. 
-(3)~We will develop scalable algorithms with theoretical guarantees on the solution quality. 
-\fi
-
-\spara{Hypothesis and objectives.}
-%
-% Our encompassing research objective is to 
-% develop a rigorous methodology in order to address 
-% deficiencies in today's online media, such as 
-% bias, conflict, and information silos. 
-The project is grounded on the following hypothesis. 
-
-\medskip
-\noindent
-\hspace{-3mm}\colorbox{verylightmagenta}{
-\begin{minipage}{\textwidth}
-{\bf Hypothesis:} 
-We postulate that bias, conflict, polarization, and information silos
-are real phenomena in today's online media. 
-We hypothesize that these deficiencies can be alleviated by designing and building appropriate tools, 
-and that people can get interested to explore and engage with alternative viewpoints. 
-\end{minipage}}
-
-\medskip
-Our encompassing research objective is to test this hypothesis.
-To achieve this objective we aim to consolidate existing approaches, 
-including our recent work, 
-and push significantly the state-of-the-art 
-in terms of models, novel problem formulations, 
-improved algorithmic techniques, and applications.
-In particular, {\acronym} has the following concrete objectives. 
-%
-\begin{description}
-\setlength{\itemsep}{-1pt}
-\item[{Models:}]
-Develop novel models for analyzing data on news dissemination and online discussions in online media, 
-with the aim to obtain a deeper understanding on phenomena related to bias, polarization, and 
-information bottlenecks.
-Extend standard data-mining problem formulations for this particular application domain, 
-and formulate novel problem representations for the tasks specified in the three research thrusts of the project.
-
-\item[{Algorithms:}]
-Develop efficient algorithmic solutions for the formulated problems.
-Our algorithms should take into account the rich available data representations
-as well as the stochastic and noisy nature of the problem domain.
-The proposed algorithms should be efficient, 
-should be able to deal with uncertainty, and should offer theoretical guarantees.
-
-% \item[\manet\ {Limitations:}] Study the proposed structure-discovery problems under the different computational models in order to understand their fundamental limitations, and  develop hardness results or lower bounds.
-
-\item[{Applications:}]
-Apply the developed methodology on different application scenarios 
-and evaluate the resulting algorithms on real-world datasets.
-Validate proof-of-concept by showcasing findings of the methods on different use cases. 
-Implement the developed algorithms and make them available to the scientific community.
-
-\item[{Education:}]
-Nurture doctoral students and postdoctoral researchers.
-Educate them about fundamental algorithmic techniques,
-teach them the value of identifying important data-analysis problems, 
-and support them becoming independent researchers.
-\end{description}
-
-% \todo{access to data}
-
-\spara{State of the art.}
-%
-%% Bias and polarization in general, mechanisms
-%
-% The study of the phenomena of bias and polarization 
-% predates the era of the internet and social media.
-% The first works appear in the fields of psychology, 
-% social science, and political science. 
-A number of theories have been proposed in psychology and social sciences 
-in an attempt to {\em explain the mech\-a\-nisms} that result in various types
-of bias that are present in our society. 
-Those include the theories of 
-{\em cognitive dissonance}~\cite{festinger1962theory}, 
-\emph{selective exposure}~\cite{frey1986recent}, and
-\emph{biased assimilation}~\cite{lord1979biased}. 
-All these psychological mech\-a\-nisms, 
-together with other biases, such as, 
-\emph{algorithmic filtering} and \emph{personalization}~\cite{bozdag2013bias}, 
-are connected to the phenomenon of information silos and echo chambers
-in online media~\cite{pariser2011filter}.
-% Understanding how all these phenomena interact with each other and the precise
-% causality relations is an open research domain.
-% 
-% \smallskip
-With the wide availability of online media data, 
-a lot of work has been devoted in studying 
-controversy, polarization, bias, and conflict in social media. 
-In one of the first papers, Adamic and Glance
-study the link structure of blog posts on the 2004 US presidential election;
-they provide evidence that conservative blogs are linking 
-to each other more frequently and in a denser pattern~\cite{adamic2005political}. 
-Conover et al.\ study twitter data from congressional midterm elections
-and identify a highly-segregated partisan network structure
-by the means of graph partitioning~\cite{conover2011political}. 
-% Guerra et al.\ propose an alternative graph-structure measure 
-% based on the analysis of the boundary between communities~\cite{guerra2013measure}, 
-% while Morales et al.\ apply graph-diffusion techniques~\cite{morales2015measuring}. 
-
-\smallskip
-Echo chambers have been shown to exist in various forms of online media such as 
-blogs~\cite{gilbert2009blogs,wallsten2005political}, forums~\cite{edwards2013participants}, and 
-social-media sites~\cite{barbera2015tweeting,gromping2014echo,quattrociocchi2016echo}.
-An et al.\ analyzed the activity of twitter users who engage with political news
-and found that 90\% of the users directly follow news media of only one political leaning~\cite{an2014sharing}. 
-In a study performed in Facebook, Bakshy et al.\
-% measure the degree to which users with declared political affiliations 
-% consume cross-cutting content, i.e., 
-% content predominantly posted by users of opposing political affiliation~\cite{bakshy2015exposure}.
-% They 
-find that although users are exposed to a significant amount of cross-cutting content, 
-they opt to engage with proportionately less cross-cutting content~\cite{bakshy2015exposure}.
-% 
-% \smallskip
-A few recent papers have addressed the problem of 
-mitigating polarization and diffusing echo chambers. 
-The underlying ideas involve making users aware 
-of other users' stance on a given issue~\cite{liao2014can,liao2014expert}, 
-or revealing the bias of the news articles they read~\cite{munson2013encouraging}.
-In work pioneered in my research group, 
-we have studied the problem of reducing bias and polarization
-by the means of 
-recommending links of users to follow~\cite{garimella2017reducing},
-selecting users to promote campaigns~\cite{garimella2017balancing},
-and maximizing diversity~\cite{diversity-cascade,diversity-static}.
-
-\smallskip
-In summary, the problem of reducing bias and polarization in online information
-has already received some attention in the literature.
-However, the area is still largely undeveloped and most works are preliminary.
-The topic has attracted a lot of attention in the public discussion forum, 
-and there is exciting work ahead to be done in a range of disciplines, 
-including with no doubt computer science.
-
 
 \subsection*{Section b. Methodology}
 
@@ -775,7 +625,7 @@ primal-dual methods, convex optimization, etc.
 In addition, to deal with the stochastic nature of the data 
 we will develop probabilistic models and algorithms that handle uncertainty.
 We will also focus on designing scalable methods, 
-by applying techniques based on sampling and sketching~\cite{cormode2011synopses}. 
+by applying techniques based on sampling and sketching. 
 The project also requires expertise on text analysis, 
 natural-language processing, visualization, and user studies. 
 These needs will be covered by hiring postdoctoral researchers with relevant expertise.
@@ -801,14 +651,14 @@ during the information-dissemination process.
 \medskip
 This thrust builds strongly on our preliminary work.
 In particular, we have considered the problem 
-of identifying controversial discussions on social media~\cite{garimella2018quantifying}.
+of identifying controversial discussions on social media.% ~\cite{garimella2018quantifying}.
 Our methods are designed to be applicable to topics in any domain 
 (e.g., political, economical, or cultural), and in a general setting.
 We have also addressed the question of devising a measure of controversy,
 which is applicable to any online discussion.
 More recently we devised a new study aimed to 
 understand the phenomenon of echo chambers in social media, 
-and to characterize distinct user types and their role in their local community~\cite{garimella2018political}.
+and to characterize distinct user types and their role in their local community. %~\cite{garimella2018political}.
 
 \smallskip
 In this project we will extend significantly our problem representations
@@ -834,19 +684,23 @@ In this setting we will consider the problems of discovering alliances
 (dense subgraphs with many `$+$' and few `$-$' edges) 
 or conflicting communities
 (sets of vertices with many `$+$' and few `$-$' within sets and many `$-$' and few `$+$' across sets). 
-These are novel problems related to dense-subgraph discovery~\cite{rozenshtein2014event,sozio2010community-search,tatti2015density,tsourakakis2013denser}
-and correlation clustering~\cite{bansal2004correlation,gionis2007clustering}.
+These are novel problems related to dense-subgraph discovery
+% ~\cite{rozenshtein2014event,sozio2010community-search,tatti2015density,tsourakakis2013denser}
+and correlation clustering. % ~\cite{bansal2004correlation,gionis2007clustering}.
 
 \smallskip
 We will also leverage the temporal dimension of the data
 and study formulations that allow to model and discover 
 bias, polarization, and conflict in the setting of temporal networks.
 This thread will make strong connections with our previous work on 
-temporal networks~\cite{rozenshtein2016temporal, rozenshtein2016reconstructing, rozenshtein2017finding}
+temporal networks.
+% ~\cite{rozenshtein2016temporal, rozenshtein2016reconstructing, rozenshtein2017finding}
 Finally we will consider problem representations  
-related to motif discovery~\cite{aslay2018mining,coletto2017motif} and role mining~\cite{arockiasamy2016combinatorial} 
+related to motif discovery
+% ~\cite{aslay2018mining,coletto2017motif} 
+and role mining.
+% ~\cite{arockiasamy2016combinatorial} 
 in the context of \acronym.
-
 
 \subsubsection*{Research thrust 2: \explore}
 
@@ -868,7 +722,7 @@ and support them explore alternative viewpoints.
 Our preliminary work in this thrust
 includes a novel method for inferring political-leaning scores
 for user accounts and content sources in social media, 
-in a completely unsupervised manner~\cite{lahoti2018joint}.
+in a completely unsupervised manner. %~\cite{lahoti2018joint}.
 Those scores can be used in a number of different applications
 involving information-retrieval tasks or content visualization and exploration.
 
@@ -917,7 +771,7 @@ Again, this thrust is strongly based on our preliminary results.
 In one of our most recent works we considered the problem of 
 selecting a set of representative content items
 (such as, news articles with varying opinions on a given topic)
-to summarize a larger set of items~\cite{consensus-k-median}. 
+to summarize a larger set of items. %~\cite{consensus-k-median}. 
 This is a standard clustering problem, 
 but in addition we require to select representative items
 that are close to each other,
@@ -933,9 +787,11 @@ we ask to make relevant recommendations to users,
 which however have positive externalities to the whole network.
 In particular,
 we have addressed the problems
-of balancing information exposure of different viewpoints in the network~\cite{garimella2017balancing},
+of balancing information exposure of different viewpoints in the network,
+% ~\cite{garimella2017balancing},
 and maximizing network diversity, 
-where diversity is measured in different ways~\cite{diversity-cascade,diversity-static}.
+where diversity is measured in different ways.
+% ~\cite{diversity-cascade,diversity-static}.
 
 \smallskip
 In \acronym\ we will advance the state of the art in many directions.
@@ -974,7 +830,8 @@ and University of Helsinki (assistant professor).
 
 \smallskip 
 The PI and his research team have pioneered a line of work on the project theme
-and have obtained several preliminary results~\cite{diversity-cascade,garimella2017reducing,garimella2017balancing,garimella2018quantifying,lahoti2018joint,diversity-static}.
+and have obtained several preliminary results.
+% ~\cite{diversity-cascade,garimella2017reducing,garimella2017balancing,garimella2018quantifying,lahoti2018joint,diversity-static}.
 The objective of this project is to advance the state of the art in this important topic
 on multiple fronts. 
 In particular, we aim to work on more realistic models, 
