--- a/research plan/plan.tex
+++ b/research plan/plan.tex
@@ -553,6 +553,24 @@ Explain in particular how the time allocated by you (that is, your activity leve
 as project leader is suitable for the task, 
 including the relationship with your other research undertakings.}
 
+The PI will devote 50\% of his time in the project. 
+He will supervise the doctoral students and postdocs, 
+be responsible for scientific lead, 
+and will allocate time to work on mathematical and algorithmic problems arising in the project.
+He will also be responsible for ensuring flow of information and collaborations
+with other groups in KTH and with his international collaboration network, 
+offering the possibility to the doctoral students to make research visits and internships.
+The PI is currently managing an ERC Advanced Grant (2020 to 2025),
+which also employs 3 doctoral students and 3 postdocs, 
+so this will be a smooth transition to a similar-sized project.
+
+The doctoral students and postdocs will work in pairs on the corresponding research theme.
+We will encourage an environment of openness and collaboration, 
+while ensuring that each team member leads their own project.
+
+During the hiring process we will support diversity and consider actions to achieve gender balance. 
+Currently the PI supervises 6 doctoral students and the gender ratio is 3:3.
+
 \subsection*{5.~~~Need for research infrastructure}
 
 \instructions{
@@ -560,6 +578,12 @@ Specify the project’s need for international and national research infrastruct
 If you choose to use other infrastructures than those supported by the Swedish Research Council, 
 and that are thereby open to all, 
 you must justify this (also applies to local research infrastructure).}
+
+The project is mainly of theoretical nature and will not require extensive computing infrastructure. 
+Commodity laptops will be provided to all team members. 
+For implementing and evaluating our methods we will use the available 
+KTH computing facilities
+and the National Academic Infrastructure for Supercomputing in Sweden (NAISS).
 
 \subsection*{6.~~~International and national collaboration}
 
